--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,6 +26,20 @@
     </ion-toolbar>
   </ion-header>
 
+  <!-- Conditional Card -->
+  <ion-card *ngIf="showCard">
+    <ion-card-header>
+      <ion-card-title>Explore GIS Data</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      This app utilizes the ArcGIS API to display and analyze spatial data. Use the map above to explore geospatial data interactively.
+      <!-- Button to close the card -->
+      <ion-button color="primary" expand="block" (click)="closeCard()">
+        Tutup
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
+
   <!-- Map Container -->
   <div id="mapId" style="height: 90%; width: 100%; background-color: #f0f0f5;"></div>
 
@@ -35,14 +49,5 @@
     <ion-button color="danger" (click)="hideMarkers()">Hide Markers</ion-button>
   </div>
 
-  <!-- Conditional Card -->
-  <ion-card *ngIf="showCard">
-    <ion-card-header>
-      <ion-card-title>ION-FLET</ion-card-title>
-    </ion-card-header>
-    <ion-card-content>
-      This app utilizes the ArcGIS API to display and analyze spatial data, with the added feature of Leaflet.
-      <ion-button color="primary" expand="block" (click)="closeCard()">Tutup</ion-button>
-    </ion-card-content>
-  </ion-card>
+
 </ion-content>
